--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Realistic Bird</title>
-		<style></style>
+		<style>html,body{margin:0;padding:0;width:100%;height:100%;overflow:hidden}</style>
 	</head>
 	<body>
 		<script src="lib/howler.min.js"></script>
 		<script src="lib/coffee-script.js"></script>
+		<script src="lib/display.js"></script>
 		<script type="text/coffeescript" src="game.coffee"></script>
 	</body>
 </html>
